--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /********************************************************************************
+  ~  * 
+  ~  * Copyright (C) 2013 Zatta
+  ~  * 
+  ~  * This file is part of pilight for android.
+  ~  * 
+  ~  * pilight for android is free software: you can redistribute it and/or modify 
+  ~  * it under the terms of the GNU General Public License as published by the 
+  ~  * Free Software Foundation, either version 3 of the License, or (at your option)
+  ~  * any later version.
+  ~  * 
+  ~  * pilight for android is distributed in the hope that it will be useful, but 
+  ~  * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+  ~  * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
+  ~  * for more details.
+  ~  * 
+  ~  * You should have received a copy of the GNU General Public License along 
+  ~  * with pilightfor android.
+  ~  * If not, see <http://www.gnu.org/licenses/>
+  ~  * 
+  ~  * Copyright (c) 2013 pilight project
+  ~  ********************************************************************************/
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="by.zatta.pilight"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.1" >
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="19" />
     
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:debuggable="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -37,12 +59,6 @@
             </intent-filter>
         </service>
 
-        <receiver android:name="by.zatta.pilight.StartupReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-        
         <receiver android:name="by.zatta.pilight.ConnectionChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
