Preparing Tasker support
Changed label and activity name because of tasker conflicting with
kiwi's plugin. Prepared useage of my existing service.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,9 +67,9 @@
         
         <!-- Tasker support based on FrostedKiwi's work -->
         <activity
-            android:name="by.zatta.pilight.tasker.EditActivity"
+            android:name="by.zatta.pilight.tasker.ActionActivity"
             android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name" >
+            android:label="PiTasker" >
             <intent-filter>
                 <action android:name="com.twofortyfouram.locale.intent.action.EDIT_SETTING" />
             </intent-filter>
