--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,8 +25,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="by.zatta.pilight"
-    android:versionCode="2"
-    android:versionName="0.2" >
+    android:versionCode="3"
+    android:versionName="0.3" >
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -69,7 +69,7 @@
         <activity
             android:name="by.zatta.pilight.tasker.ActionActivity"
             android:icon="@drawable/ic_launcher"
-            android:label="PiTasker" >
+            android:label="piTasker" >
             <intent-filter>
                 <action android:name="com.twofortyfouram.locale.intent.action.EDIT_SETTING" />
             </intent-filter>
