--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,5 @@
 # Set default behaviour, in case users don't have core.autocrlf set.
-* text=auto
-
-# Declare files that will always have CRLF line endings on checkout.
-# *.sh text eol=lf
+* text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
