Workaround nullpointers while reconnecting

--- a/pilightTesting/build.gradle
+++ b/pilightTesting/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:library:1.9.1'
     compile 'com.github.gabrielemariotti.cards:library-extra:1.9.1'
     compile 'com.android.support:support-v4:19.1.0'
+	compile 'com.nineoldandroids:library:2.4.0'
 }
