Using melnykov's library
I think this a better library for my purpose here

--- a/pilightTesting/build.gradle
+++ b/pilightTesting/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:library-extra:1.9.1'
     compile 'com.android.support:support-v4:19.1.0'
 	compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
 }
