--- a/pilightTesting/src/main/AndroidManifest.xml
+++ b/pilightTesting/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="by.zatta.pilight.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
